# footzi

./: .gitignore  FootZI.docx  README.md  docker-compose.yml  ~$FootZI.docx
api/: Dockerfile  package-lock.json  package.json
api/src/: app.controller.ts  app.module.ts  app.service.ts  player-stats.entity.ts
api/src/posts/: post.entity.ts  posts.controller.ts  posts.service.ts
api/src/users/: user.entity.ts
etl/: Dockerfile  pyproject.toml
etl/flows/: premier_league.py  test_player_details.py
etl/scrapers/: top_scorers.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/players/[id]/: loading.tsx  page.tsx
frontend/src/components/: PlayerChart.tsx  PlayerList.tsx
infra/postgres/: init.sql
