[tool.poetry]
name = "etl"
version = "0.1.0"
description = "ETL pipeline for Footzi"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.11.2"
playwright = "^1.37.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
lxml = "^4.9.3"
pydantic = "^2.3.0"